[metadata]
name = ratex
version = 0.2.1
author = Tristan Simpson
author_email = heytristaann@gmail.com
description = Use Python functions to create clean, optimized, readable LaTeX PDFs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/realTristan/RaTeX
project_urls =
    Bug Tracker = https://github.com/realTristan/RaTeX/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src