[metadata]
name = ratex
version = 0.2.9.601
author = Tristan Simpson
author_email = heytristaann@gmail.com
description = Efficiently Build LaTeX PDF Documents with Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/realTristan/ratex
project_urls =
    Bug Tracker = https://github.com/realTristan/ratex/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src